--- a/css/style.css
+++ b/css/style.css
@@ -79,3 +79,93 @@ nav .nav_items ul li:hover {
   color: #8671fc;
 }
 /* ======navber css end here==== */
+/* ======about css starts here==== */
+#about {
+  background: url(../images/about.png) no-repeat center;
+  background-size: cover;
+  padding: 150px 0;
+}
+#about .sidebyside {
+  display: grid;
+  grid-template-columns: 1.5fr 1fr;
+  align-items: center;
+  column-gap: 89px;
+}
+#about .left {
+  justify-self: end;
+}
+#about .left h4 {
+  color: #fff;
+  font-family: var(--Raleway);
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 26px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  margin-bottom: 21px;
+}
+#about .left h2 {
+  color: #fff;
+  font-family: var(--Raleway);
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: 0.3px;
+  margin-bottom: 30px;
+  max-width: 540px;
+}
+#about .left p {
+  color: #fff;
+  font-family: var(--Raleway);
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 26px; /* 162.5% */
+  letter-spacing: 0.2px;
+  max-width: 500px;
+  margin-bottom: 70px;
+}
+#about .left a {
+  display: inline-block;
+  color: #fff;
+  text-align: right;
+  font-family: var(--Raleway);
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: uppercase;
+}
+#about .right h2 {
+  color: #fff;
+  font-family: var(--Raleway);
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: 0.3px;
+  max-width: 360px;
+  margin-bottom: 30px;
+}
+#about .right p {
+  color: #fff;
+  font-family: var(--Raleway);
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 26px;
+  letter-spacing: 0.2px;
+  max-width: 421px;
+  margin-bottom: 30px;
+}
+#about .right a {
+  color: #fff;
+  font-family: var(--Raleway);
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 26px;
+}
+/* ======about css end here==== */
